section intro fix bug with overflow hidden

--- a/styles/_components.scss
+++ b/styles/_components.scss
@@ -58,6 +58,7 @@
 
 .section--intro {
   padding-top: 8rem;
+  overflow: hidden;
   .container {
     display: flex;
     flex-direction: column-reverse;
