--- a/styles/main.css
+++ b/styles/main.css
@@ -156,6 +156,7 @@ section {
 
 .section--intro {
   padding-top: 8rem;
+  overflow: hidden;
 }
 
 .section--intro .container {
